[package]
name = "stream8"
version = "0.1.0"
authors = ["ozer <ozer.cevikaslan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
tokio = { version = "0.2.6", features = ["rt-core", "rt-util", "macros"] }
env_logger = "0.7.1"
serde = "1.0.75"
serde_json = "1.0.24"
serde_derive = "1.0.75"
juniper = "0.14.2"
dotenv = "0.9.0"
mongodb = "0.9.2"
bson = "0.14.0"
futures = "0.3"